--- a/BoldStudio/index.html
+++ b/BoldStudio/index.html
@@ -8,6 +8,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="./src/assets/LogoBold.png" />
     <title>Bold Studio</title>
   </head>
   <body>
